<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/half_padding"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_pet_name"
                android:hint="@string/hint_pet_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_pet_breed"
                android:hint="@string/hint_pet_breed"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_gender"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="@dimen/spinner_height"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/activity_margin"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_phoneno"
            style="@style/CategoryStyle" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/quater_margin">
            <EditText
                android:id="@+id/edit_pet_weight"
                android:hint="@string/hint_pet_phone"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_pet_weight"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_foundername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_foundername"
            style="@style/CategoryStyle" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/quater_margin">
            <EditText
                android:id="@+id/edit_pet_foundername"
                android:hint="@string/hint_pet_foundername"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_lastseen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_lastseenplace"
            style="@style/CategoryStyle" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/quater_margin">
            <EditText
                android:id="@+id/edit_pet_lastseenplace"
                android:hint="@string/category_lastseenplace"
                android:inputType="textCapWords"
                android:maxLines="2"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_adoption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_adoption"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/spinner_adoption"
                android:layout_height="@dimen/spinner_height"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/activity_margin"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
